# PA2-velkauloha

./: .gitignore  AST.cpp  AST.h  ASTAdd.cpp  ASTAdd.h  ASTBinOperator.cpp  ASTBinOperator.h  ASTBuilder.cpp  ASTBuilder.h  ASTDiv.cpp  ASTDiv.h  ASTEq.cpp  ASTEq.h  ASTGe.cpp  ASTGe.h  ASTGt.cpp  ASTGt.h  ASTLe.cpp  ASTLe.h  ASTLt.cpp  ASTLt.h  ASTMul.cpp  ASTMul.h  ASTNe.cpp  ASTNe.h  ASTNeg.cpp  ASTNeg.h  ASTNodeReference.cpp  ASTNodeReference.h  ASTNodeValue.cpp  ASTNodeValue.h  ASTPow.cpp  ASTPow.h  ASTSub.cpp  ASTSub.h  ASTUnOperator.cpp  ASTUnOperator.h  CCell.cpp  CCell.h  CMakeLists.txt  (+11 more)
AST/: AST.h  ASTAdd.cpp  ASTAdd.h  ASTBinOperator.cpp  ASTBinOperator.h  ASTBuilder.cpp  ASTBuilder.h  ASTDiv.cpp  ASTDiv.h  ASTEq.cpp  ASTEq.h  ASTGe.cpp  ASTGe.h  ASTGt.cpp  ASTGt.h  ASTLe.cpp  ASTLe.h  ASTLt.cpp  ASTLt.h  ASTMul.cpp  ASTMul.h  ASTNe.cpp  ASTNe.h  ASTNeg.cpp  ASTNeg.h  ASTNodeReference.cpp  ASTNodeReference.h  ASTNodeValue.cpp  ASTNodeValue.h  ASTPow.cpp  ASTPow.h  ASTSub.cpp  ASTSub.h  ASTUnOperator.cpp  ASTUnOperator.h
